--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -2,7 +2,7 @@
     width: 25%;
     height: 30vh;
     position: relative;
-    margin-top: -1%;
+    margin-top: -2%;
 }
 
 .projects__container-imagen{
@@ -30,10 +30,9 @@
 
 .repositorio{
     width: 40%;
-    color: var(--blanco);
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
-    background: var(--letra);
     padding: 10px;
     text-align: center;
     border-radius: 30px;
